tests/snapshots/snapshot_golden_comprehensive__dialect_all_variants.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: "Dialect::all()"
---
[
  "open_ai",
  "claude",
  "gemini",
  "codex",
  "kimi",
  "copilot"
]
