tests/snapshots/snapshot_golden_comprehensive__envelope_event_delta.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: env
---
{
  "t": "event",
  "ref_id": "run-001",
  "event": {
    "ts": "2025-07-01T12:00:00Z",
    "type": "assistant_delta",
    "text": "token "
  }
}
