tests/snapshots/snapshot_golden_comprehensive__envelope_event_tool_call.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: env
---
{
  "t": "event",
  "ref_id": "run-001",
  "event": {
    "ts": "2025-07-01T12:00:00Z",
    "type": "tool_call",
    "tool_name": "read_file",
    "tool_use_id": "tu_100",
    "parent_tool_use_id": null,
    "input": {
      "path": "main.rs"
    }
  }
}
