tests/snapshots/snapshot_golden_comprehensive__envelope_fatal_with_error_code.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": "run-001",
  "error": "Backend not found",
  "error_code": "BACKEND_NOT_FOUND"
}
