tests/snapshots/snapshot_golden_comprehensive__envelope_fatal_without_ref.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": null,
  "error": "Handshake timeout"
}
