tests/snapshots/snapshot_golden_comprehensive__envelope_hello_default_mode.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: v
---
{
  "backend": {
    "adapter_version": "1.2.0",
    "backend_version": "3.0.0",
    "id": "sidecar:node"
  },
  "capabilities": {
    "streaming": "native",
    "tool_use": "emulated"
  },
  "contract_version": "abp/v0.1",
  "mode": "mapped",
  "t": "hello"
}
