tests/snapshots/snapshot_golden_comprehensive__envelope_hello_empty_caps.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: env
---
{
  "t": "hello",
  "contract_version": "abp/v0.1",
  "backend": {
    "id": "mock",
    "backend_version": null,
    "adapter_version": null
  },
  "capabilities": {},
  "mode": "mapped"
}
